k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      annotations:
        repoly.io/restartedAt: "2026-02-22T13:58:00Z"
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: azzakyraihan/first-commit-api:latest
          imagePullPolicy: Always
          command: ["node", "dist/index.js"]
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      annotations:
        repoly.io/restartedAt: "2026-02-22T13:58:00Z"
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: azzakyraihan/first-commit-worker:latest
          imagePullPolicy: Always
          command: ["node", "dist/index.js"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      annotations:
        repoly.io/restartedAt: "2026-02-22T13:58:00Z"
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: azzakyraihan/first-commit-web:latest
          imagePullPolicy: Always
          command: ["sh", "-c", "find /apps/web -name .next; cp -r /apps/web/apps/web/.next /apps/web/.next || true; cp -r /apps/web/apps/web/public /apps/web/public || true; npx next start"]
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-commit-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: first-commit.hackathon.sev-2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
